--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@vercel/node": "^5.3.22",
     "cookie-parser": "^1.4.7",
     "express": "^4.19.2",
     "mongoose": "5.12.0",
@@ -32,3 +33,4 @@
     "nodemon": "^3.1.0"
   }
 }
+
